--- a/packages/storybook-html/src/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/src/components/footer/footer.docs.mdx
@@ -16,29 +16,26 @@ The global footer provides a consistent branding and navigational element across
 </Canvas>
 
 ```html
-    <footer class="uq-footer" data-gtm-category="Footer">
+        <footer class="uq-footer" data-gtm-category="Footer">
       <div  class="uq-footer__reconciliation">
         <div class="uq-footer__acknowledgement">
-              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation statement</a>
+          <img class="uq-footer__acknowledgement-flag" src="https://static.uq.net.au/v14/images/rap/aboriginal.svg"/> <img class="uq-footer__acknowledgement-flag" src="https://static.uq.net.au/v14/images/rap/torres-strait-islanders.svg"/> <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
         </div>
       </div>
       <div class="uq-footer__container">
-        <nav class="uq-footer__navigation uq-footer--desktop">
+        <nav class="uq-footer__navigation uq-footer--desktop" data-gtm-category="Footer navigation">
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-footer__navigation-item uq-footer__navigation--is-open">
               <h2 class="uq-footer__navigation-title">Media</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Media team contacts</a>
+                  <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Find a subject matter expert</a>
+                  <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Media pack downloads</a>
-                </li>
-                <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">UQ news</a>
+                  <a href="https://www.uq.edu.au/news/" class="uq-footer__navigation-link">UQ news</a>
                 </li>
               </ul>
             </li>
@@ -46,13 +43,19 @@ The global footer provides a consistent branding and navigational element across
               <h2 class="uq-footer__navigation-title">Staff</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Jobs at UQ</a>
+                  <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">2022 strategic plan consultation</a>
+                  <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">IT Supoort</a>
+                  <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
                 </li>
               </ul>
             </li>
@@ -60,16 +63,19 @@ The global footer provides a consistent branding and navigational element across
               <h2 class="uq-footer__navigation-title">Current students</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Program and courses</a>
+                  <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Key dates</a>
+                  <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Program and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Student support</a>
+                  <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">IT Supoort</a>
+                  <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
                 </li>
               </ul>
             </li>
@@ -77,19 +83,7 @@ The global footer provides a consistent branding and navigational element across
               <h2 class="uq-footer__navigation-title">Library</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Library services</a>
-                </li>
-                <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Search catalogue</a>
-                </li>
-                <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">UQ journals</a>
-                </li>
-                <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Library hours</a>
-                </li>
-                <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Library contacts</a>
+                  <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
                 </li>
               </ul>
             </li>
@@ -97,16 +91,19 @@ The global footer provides a consistent branding and navigational element across
               <h2 class="uq-footer__navigation-title">Contact</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Find a researcher</a>
+                  <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+                  <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Divisions and departments</a>
+                  <a href="https://www.uq.edu.au/departments/unit_types.html" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Campus maps and facilities</a>
+                  <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campus maps and transport</a>
                 </li>
               </ul>
             </li>
@@ -114,81 +111,87 @@ The global footer provides a consistent branding and navigational element across
         </nav>
 
         <!-- Mobile Footer Navigation-->
-        <nav class="uq-footer__navigation uq-footer--mobile">
+        <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
-              <button href="#" class="uq-accordion__toggle uq-footer__navigation-toggle">Media</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle">Media</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Media team contacts</a>
+                  <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Find a subject matter expert</a>
+                  <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Media pack downloads</a>
-                </li>
-                <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">UQ news</a>
+                  <a href="https://www.uq.edu.au/news/" class="uq-footer__navigation-link">UQ news</a>
                 </li>
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button href="#" class="uq-accordion__toggle uq-footer__navigation-toggle">Staff</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle">Staff</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Jobs at UQ</a>
+                  <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">2022 strategic plan consultation</a>
+                  <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">IT Supoort</a>
+                  <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
                 </li>
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button href="#" class="uq-accordion__toggle uq-footer__navigation-toggle">Current students</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle">Current students</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Program and courses</a>
+                  <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Key dates</a>
+                  <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Program and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Student support</a>
+                  <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">IT Supoort</a>
+                  <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
                 </li>
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button href="#" class="uq-accordion__toggle uq-footer__navigation-toggle">Library</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle">Library</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Library services</a>
-                </li>
-                <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">UQ journals</a>
+                  <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
                 </li>
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button href="#" class="uq-accordion__toggle uq-footer__navigation-toggle">Contact</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle">Contact</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Find a researcher</a>
+                  <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+                  <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Divisions and departments</a>
+                  <a href="https://www.uq.edu.au/departments/unit_types.html" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Campus maps and facilities</a>
+                  <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campus maps and transport</a>
                 </li>
               </ul>
             </li>
@@ -198,36 +201,36 @@ The global footer provides a consistent branding and navigational element across
         <div class="uq-footer__contact">   
           <nav class="uq-footer__contact-item">
             <ul class="uq-footer__footer-list uq-footer__contact-social"> 
-              <li class="uq-footer__footer-item"><a href="#" class="uq-footer__meta-icons--facebook uq-footer__meta-icons"></a></li> 
-              <li class="uq-footer__footer-item"><a href="#" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons"></a></li> 
-              <li class="uq-footer__footer-item"><a href="#" class="uq-footer__meta-icons--twitter uq-footer__meta-icons"></a></li>
-              <li class="uq-footer__footer-item"><a href="#" class="uq-footer__meta-icons--youtube uq-footer__meta-icons"></a></li>
-              <li class="uq-footer__footer-item"><a href="#" class="uq-footer__meta-icons--instagram uq-footer__meta-icons"></a></li>
+              <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons"></a></li> 
+              <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons"></a></li> 
+              <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons"></a></li>
+              <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons"></a></li>
+              <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons"></a></li>
             </ul>
           </nav> 
-          <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Web login'});">Web login</a></div>
+          <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
        
         </div>
         <nav class="uq-footer__meta">
           <ul  class="uq-footer__footer-list">
             <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
             <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
-            <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a></li>
+            <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external">00025B</a></li>
           </ul>
         </nav>
         <nav class="uq-footer__footer">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
-                  <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+                  <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
               </li>
               <li class="uq-footer__footer-item">
-                  <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to information'});">Right to information</a>
+                  <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
               </li>
               <li class="uq-footer__footer-item">
-                  <a href="https://uq.edu.au/accessibility/" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
+                  <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
               </li>
               <li class="uq-footer__footer-menu__item">
-                <a href="https://uq.edu.au/contacts" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
+                <a href="https://uq.edu.au/contacts" class="uq-footer__link">Feedback</a>
               </li>
           </ul>
            </nav>
